apps/photoframe-rs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoframe-rs
  namespace: default
spec:
  selector:
    matchLabels:
      app: photoframe-rs
  template:
    metadata:
      labels:
        app: photoframe-rs
    spec:
      volumes:
        - name: photoframe-rs-config
          persistentVolumeClaim:
            claimName: photoframe-rs-config
      containers:
        - name: photoframe-rs
          image: ghcr.io/fruitiex/photoframe-rs-server:main@sha256:537b3c7d1537356ddc8034730a9fc9cd04791eb410a5614db01984cb5e190833
          resources:
            limits:
              memory: 256Mi
              cpu: 1000m
          workingDir: /app
          volumeMounts:
            - mountPath: /app
              name: photoframe-rs-config
