apps/photoframe-rs/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: photoframe-rs
  namespace: default
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - photoframe.fruitiex.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: photoframe-rs
          port: 8080
      timeouts:
        request: 0s
